@@ -2516,7 +2516,7 @@ In these plain text email templates the first line with content is used as subje
 <em>This template is used to notify admin by email that a person has approved his/her registration and requires accept/refuse decision.</em>
 <br />
 <br />
-<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_HTML### begin -->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_ADMIN_HTML### begin -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
@@ -2544,7 +2544,7 @@ In these plain text email templates the first line with content is used as subje
 ###GW1B######SITE_NAME######GW1E###</p>
 <!--###SUB_RECORD###-->
 </body></html>
-<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_HTML### end-->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_ADMIN_HTML### end-->
 
 
 
@@ -2553,7 +2553,7 @@ In these plain text email templates the first line with content is used as subje
      You can use the newly created record as markers on the format ###FIELD_[fieldname]### </em>
 <br />
 <br />
-<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW### begin -->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_ADMIN### begin -->
 <!--###SUB_RECORD###-->###LABEL_V_REGISTRATION_REVIEW_SUBJECT###
 
 ###LABEL_V_TO_THE_ADMINISTRATOR###
@@ -2569,7 +2569,7 @@ In these plain text email templates the first line with content is used as subje
 ###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!--###SUB_RECORD###-->
-<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW### end-->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_REVIEW_ADMIN### end-->
 
 
 
