@@ -3,6 +3,7 @@
 	* Fixed bug #11149(Forge): Extension Manager issues warning regarding class tx_srfeuserregister_lib_conf
 	* Fixed issue #11150(Forge): Remove references to obsolete extension patch1822
 	* Fixed issue #11151(Forge): Remove global declarations from class tx_srfeuserregister_data
+	* Fixed bug #15182(bugtracker): Problem with administrative review
 
 2010-11-19 Franz Holzinger  <franz@ttproducts.de>
 	* new feature: use v_dear_male or v_dear_female instead of v_dear if a gender has been entered
